--- a/test/test.html
+++ b/test/test.html
@@ -21,7 +21,7 @@
             var animation = new Animate({
                 duration: 10000,
                 easing: [0.68, -0.55, 0.265, 1.55],
-                queue: true,
+                list: true,
                 start: function () {
                     console.log('Animation started!');
                 },
